# osu-explorer

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: Cargo.toml  osu_maps.db  osu_maps.paths.json  package.json
backend/src/: main.rs
backend/src/core/: features.rs  indexer.rs  mod.rs  model.rs  parser.rs  searcher.rs
backend/src/web/: config.rs  mod.rs  state.rs  static_files.rs
backend/src/web/handlers/: config.rs  index.rs  mod.rs  search.rs
frontend/: package.json
frontend/src/: App.vue  style.css
frontend/src/components/: BeatmapCover.vue
frontend/src/components/ui/: UiButton.vue  UiInput.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/views/: HomeView.vue  SettingsView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs
src-tauri/src/core/: config.rs  features.rs  indexer.rs  mod.rs  model.rs  parser.rs  searcher.rs
