[package]
name = "osu!explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
seli-vector-db = "0.1.0"
anyhow = "1.0"
walkdir = "2"
regex = "1"
osuparse = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
rayon = "1.11.0"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
opener = "0.7.1"
directories = "5.0.1"
