[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
seli-vector-db = "0.1.0"
anyhow = "1.0.86"
osuparse = "2.0.1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
colored = "2.1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.10.0"
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
tauri-plugin-dialog = "2"
